# aws-lambda-log-proxy

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: coverage.yml
aws-lambda-log-filter/: Cargo.toml  README.md
aws-lambda-log-filter/scripts/: entry.sh
aws-lambda-log-filter/src/: main.rs
benchmark/: .gitignore  README.md  samconfig.toml  template.yaml  validate.sh
benchmark/nodejs/: index.mjs
benchmark/nodejs/src/: index.mjs
benchmark/scripts/: entry.sh
examples/: conditional_sink.rs  hello_world.rs  suppress.README.md  suppress.rs  suppress.yaml
img/: src.drawio
src/: emf.rs  lib.rs  main.rs  processor.rs
src/processor/: builder.rs  mock.rs  processor.rs  simple.rs  sink.rs
