[package]
name = "aws-lambda-log-proxy"
version = "0.3.0"
edition = "2021"
authors = ["DiscreteTom <discrete_tom@outlook.com>"]
description = "Filter or transform logs from AWS Lambda functions before they are sent to CloudWatch Logs."
repository = "https://github.com/DiscreteTom/aws-lambda-log-proxy"
keywords = ["aws", "lambda", "cloudwatch", "log", "proxy"]
license-file = "LICENSE"
exclude = ["examples/*", "img/*", "rustfmt.toml", ".gitignore", "CHANGELOG.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-lambda-runtime-proxy = "0.3.0"
tokio = { version = "1", features = ["io-std", "io-util", "macros"] }
chrono = "0.4.37"
http = "1.1.0"
serde_json = { version = "1.0", optional = true }

[features]
default = ["emf"]
emf = ["serde_json"]

[dev-dependencies]
tokio-test = "0.4.4"
tokio = { version = "1", features = ["full"] }
